# mcp-server-template

./: .cookiecutterrc  README.md  cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: docker.yaml  publish.yaml
{{cookiecutter.project_name}}/src/{{cookiecutter.module_name}}/: __init__.py  main.py
{{cookiecutter.project_name}}/src/{{cookiecutter.module_name}}/server/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.module_name}}/server/prompts/: prompts.py
{{cookiecutter.project_name}}/src/{{cookiecutter.module_name}}/server/resources/: resources.py
{{cookiecutter.project_name}}/src/{{cookiecutter.module_name}}/server/tools/: tools.py
